Trying docker-compose configuration